--- a/QRcode_check.ipynb
+++ b/QRcode_check.ipynb
@@ -179,6 +179,10 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
